made changes to what exceptions get thrown where